# RoboArmController

./: .gitignore  NEXTSTEPS.md  README.md  steps_demo_deeplearning4j.md  steps_demo_tensorflow.md
docs/: DefinitionOfDone.md  NEXTSTEPS.md
src/RoboArmSimulation/: README.md  startGazeboSim.sh
src/RoboArmSimulation/plugins/: .gitignore  CMakeLists.txt  RoboArmPlugin.cc  Server.cpp  build.sh  remote_ctrl_robo_arm.cc  robo_arm_plugin.cc  serverMain.cc
src/RoboArmSimulation/worlds/: robo_arm.world
src/architecture/: README.md
src/architecture/components/: components.puml
src/architecture/sequence/: ControlRoboArm.puml  training.puml  training_step1_generating_dataset.puml  training_step2_generating_model.puml
src/architecture/slides/: actor.puml
src/architecture/slides_presentation/: components_blackbox_with_ML.puml  components_blackbox_without_ML_commandLine.puml  components_blackbox_without_ML_sockets.puml
src/roboarmcontrollerapp/: README.md  pom.xml
src/training/: README.md  RoboArmControllerTraining.ipynb
src/training/.ipynb_checkpoints/: RoboArmControllerTraining-checkpoint.ipynb
trainingAssets/sets/: trainingSet_1559827006805.txt  trainingSet_1560104563782.txt  trainingSet_1560159859969.txt  trainingSet_1561816373715.txt  trainingSet_1561826778883.txt  trainingSet_1561826778883_file_with_issue_line_3001.txt  trainingSet_1561827739132.txt  trainingSet_1570913599090.txt  trainingSet_1571086271647.txt  trainingSet_1571087156311.txt
trainingSets/: trainingSet_1559772446211.txt  trainingSet_1559808532223.txt
(+136 files in other folders)
